--- a/scss/style.scss
+++ b/scss/style.scss
@@ -129,11 +129,41 @@ nav {
 
     p {
         font-size: $font-size;
-        color: $color-neu-very-dark-blue;
+        color: $color-neu-very-dark-grayish-blue;
+        font-weight: $font-weight-barlow;
         line-height: 1.75;
     }
 
+    button::before{
+        position: absolute;
+        content: '';
+        width: 100%;
+        height: 10px;
+        border-radius: 10px;
+        bottom: -5%;
+        left: -1%;
+        z-index: -1;
+    }
+    
+    &.one{
+        button::before{
+            background-color: lighten($color-pri-yellow, 35%);
+        }
+    }
+    
+    &.two{
+        button::before{
+            background-color: lighten($color-pri-soft-red, 20%);
+        }
+    }
+    
     button {
+        position: relative;
+        font-family: $font-family-fraunces, $font-family-fallback;
+        font-weight: $font-weight-fraunces-2;
+        font-size: $font-size;
+        border: none;
+        background-color: transparent;
         align-self: flex-start;
     }
 }
@@ -153,7 +183,6 @@ nav {
         @include flex($direction: column, $align: center);
         gap: 30px;
         h3 {
-            color: $color-pri-dark-cyan;
             font-weight: $font-weight-fraunces-2;
             text-align: center;
             font-size: 2em;
@@ -161,13 +190,41 @@ nav {
 
         p { 
             text-align: center;
+            font-weight: $font-weight-barlow;
+            line-height: 1.5;
         }
+    }
+}
+
+.hero-learnmore-one.pic {
+    h3 {
+        color: $color-pri-dark-cyan;
+    }
+    p {
+        color: darken($color-pri-dark-moderate-cyan, 10%);
+    }
+}
+
+.hero-learnmore-two.pic {
+    h3 {
+        color: $color-pri-dark-blue;
+    }
+    p {
+        color: darken($color-pri-dark-blue, 5%);
     }
 }
 
 /* Main area */
 main {
-    @include flex($direction: column, $align: center);
+    @include flex($direction: column,  $align: center);
+    padding: 80px 0;
+    gap: 70px;
+
+    h2 {
+        color: $color-neu-dark-grayish-blue;
+        font-weight: $font-weight-fraunces-2;
+        letter-spacing: 7px;
+    }
 }
 
 .client-wraper {
@@ -181,16 +238,28 @@ main {
 
 .client {
     @include flex($direction: column, $align: center);
-    gap: 30px;
+    gap: 10px;
     
     p {
+        margin-top: 40px;
         text-align: center;
+        color: $color-neu-very-dark-blue;
+        font-weight: $font-weight-barlow;
+        line-height: 1.5;
     }
 
     img {
         width: 25%;
         height: auto;
         border-radius: 200px;
+    }
+
+    h3 {
+        margin-top: 40px;
+    }
+
+    h5 {
+        color: $color-neu-dark-grayish-blue;
     }
 }
 
@@ -207,7 +276,21 @@ main {
 
 footer {
     nav {
-        background-color: $color-pri-dark-moderate-cyan;
-        @include flex($direction: column, $align: center);
+        @include flex($direction: column, $justify: center, $align: center);
+        gap: 40px;
+        background-color: lighten($color-pri-dark-moderate-cyan, 19%);
+        padding: 70px 0;
+        
+        .logo{
+        }
+
+        a {
+            color: $color-pri-dark-moderate-cyan;
+        }
+        
+        .social-media {
+            margin-top: 50px;
+        }
+
     }
 }
