--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 
-h1, h3, p, ul, body {
+h1, h3, h5, p, ul, body {
   margin: 0;
   padding: 0;
 }
@@ -169,10 +169,33 @@ nav a {
 }
 .hero-learnmore p {
   font-size: 18px;
-  color: hsl(212deg, 27%, 19%);
+  color: hsl(213deg, 9%, 39%);
+  font-weight: 600;
   line-height: 1.75;
 }
+.hero-learnmore button::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 10px;
+  border-radius: 10px;
+  bottom: -5%;
+  left: -1%;
+  z-index: -1;
+}
+.hero-learnmore.one button::before {
+  background-color: #fff3ad;
+}
+.hero-learnmore.two button::before {
+  background-color: #ffd2cc;
+}
 .hero-learnmore button {
+  position: relative;
+  font-family: "Fraunces", Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 900;
+  font-size: 18px;
+  border: none;
+  background-color: transparent;
   align-self: flex-start;
 }
 
@@ -194,13 +217,28 @@ nav a {
   gap: 30px;
 }
 .hero-learnmore-one.pic .caption h3, .hero-learnmore-two.pic .caption h3 {
-  color: hsl(167deg, 40%, 24%);
   font-weight: 900;
   text-align: center;
   font-size: 2em;
 }
 .hero-learnmore-one.pic .caption p, .hero-learnmore-two.pic .caption p {
   text-align: center;
+  font-weight: 600;
+  line-height: 1.5;
+}
+
+.hero-learnmore-one.pic h3 {
+  color: hsl(167deg, 40%, 24%);
+}
+.hero-learnmore-one.pic p {
+  color: #346a5f;
+}
+
+.hero-learnmore-two.pic h3 {
+  color: hsl(198deg, 62%, 26%);
+}
+.hero-learnmore-two.pic p {
+  color: #144357;
 }
 
 /* Main area */
@@ -210,6 +248,13 @@ main {
   flex-wrap: nowrap;
   justify-content: normal;
   align-items: center;
+  padding: 80px 0;
+  gap: 70px;
+}
+main h2 {
+  color: hsl(232deg, 10%, 55%);
+  font-weight: 900;
+  letter-spacing: 7px;
 }
 
 .client-wraper {
@@ -231,15 +276,25 @@ main {
   flex-wrap: nowrap;
   justify-content: normal;
   align-items: center;
-  gap: 30px;
+  gap: 10px;
 }
 .client p {
+  margin-top: 40px;
   text-align: center;
+  color: hsl(212deg, 27%, 19%);
+  font-weight: 600;
+  line-height: 1.5;
 }
 .client img {
   width: 25%;
   height: auto;
   border-radius: 200px;
+}
+.client h3 {
+  margin-top: 40px;
+}
+.client h5 {
+  color: hsl(232deg, 10%, 55%);
 }
 
 /* Footer section */
@@ -256,12 +311,20 @@ main {
 }
 
 footer nav {
-  background-color: hsl(168deg, 34%, 41%);
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  justify-content: normal;
+  justify-content: center;
   align-items: center;
+  gap: 40px;
+  background-color: #76bcae;
+  padding: 70px 0;
+}
+footer nav a {
+  color: hsl(168deg, 34%, 41%);
+}
+footer nav .social-media {
+  margin-top: 50px;
 }
 
 /*# sourceMappingURL=style.css.map */
