--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,296 +1,97 @@
-@import 'base';
-
-/* Body and typography */
-body {
-    font-family: $font-family-fraunces, $font-family-fallback;
-}
-
-p, a, h5{
-    font-family: $font-family-barlow, $font-family-fallback;
-}
-
-/* Header */
-header {
-  nav {
-    @include flex($justify: space-between);
-  }
-}
-
-/** Naviation in hero of header**/
-nav {
-    padding: 0 3vw;
-    ul {
-        @include flex($align: center);
-        gap: 35px;
-    }
-
-    a {
-        font-weight: $font-weight-barlow;
-    }
-
-    #contact {
-    }
-}
-
-/**Hero layout using grid**/
-.hero {
-    @include grid($column: 1fr 1fr, $row: reapeat(4, 1fr));
-    grid-template-areas: 
-        "fullimg fullimg"
-        "learnmore-one learnmore-one-pic"
-        "learnmore-two-pic learnmore-two"
-        "learnmore-one-pic-wcap learnmore-two-pic-wcap"
-    ;
-    
-    .hero-img { grid-area: fullimg; }
-    .hero-learnmore.one { grid-area: learnmore-one; }
-    .hero-learnmore.one.pic { grid-area: learnmore-one-pic; }
-    .hero-learnmore.two { grid-area: learnmore-two; }
-    .hero-learnmore.two.pic { grid-area: learnmore-two-pic; }
-    //The bottom with caption inside them
-    .hero-learnmore-one.pic { grid-area: learnmore-one-pic-wcap; }
-    .hero-learnmore-two.pic { grid-area: learnmore-two-pic-wcap; }
-}
+@import '_base';
+@import '_desktop';
 
 
-/*** Hero children ***/
-.hero-img {
-     position: relative;
-     min-height: 100vh;
+@media (max-width: 850px){
 
-     .logo {
-         width: 10em;
-     }
+    .hero {
+        @include grid($column: 1fr, $row: auto);
+        grid-template-areas: 
+            "fullimg"
+            "learnmore-one-pic"
+            "learnmore-one"
+            "learnmore-two-pic"
+            "learnmore-two"
+            "learnmore-one-pic-wcap" 
+            "learnmore-two-pic-wcap"
+        ;
+ 
+        nav {
+            @include flex();
 
-     .caption {
-         position: absolute;
-         top: 35%;
-         left: 50%;
-         transform: translate(-50%, -35%);
-
-         @include flex($direction: column, $align: center);
-         gap: 70px;
-
-         h1 {
-             text-align: center;
-             color: $color-neu-white;
-             font-size: 3.5em;
-             font-weight: $font-weight-fraunces-2;
-             word-spacing: 10px;
-         }
-         
-         div {
-             cursor: pointer;
-             transition: 0.3s;
-             transform: translateY(0);
-         }
-
-         div:hover{
-             transition: 0.3s;
-             transform: translateY(-10%);
-         }
-     }
-
-     nav {
-         position: absolute;
-         top: 5%;
-         left: 0;
-         right: 0;
-
-         a {
-             font-family: $font-family-barlow, $font-family-fallback;
-             font-size: $font-size;
-             color: $color-neu-white;
-         }
-
-         #contact {
-             padding: 15px 30px;
-             border-radius: 30px;
-             color: $color-pri-dark-cyan;
-             background-color: $color-neu-white;
-             font-family: $font-family-fraunces, $font-family-fallback;
-             font-weight: $font-weight-fraunces-2;
-         }
-     }
-}
-
-.hero-learnmore {
-    @include flex($justify: center, $align: center);
-
-    .hero-learnmore-wraper{
-        @include flex($direction: column);
-        gap: 40px;
-        width: 60%;
-    }
-
-    h3 {
-        font-size: 2.75em;
-    }
-
-    p {
-        font-size: $font-size;
-        color: $color-neu-very-dark-grayish-blue;
-        font-weight: $font-weight-barlow;
-        line-height: 1.75;
-    }
-
-    button::before{
-        position: absolute;
-        content: '';
-        width: 100%;
-        height: 10px;
-        border-radius: 10px;
-        bottom: -5%;
-        left: -1%;
-        z-index: -1;
-    }
-    
-    &.one{
-        button::before{
-            background-color: lighten($color-pri-yellow, 35%);
+            ul {
+                display: none;
+            }
         }
     }
-    
-    &.two{
-        button::before{
-            background-color: lighten($color-pri-soft-red, 20%);
+
+    /** Hero children **/
+    .hero-img {
+        min-height: auto;
+        
+        .caption {
+             top: 45%;
+             left: 50%;
+             transform: translate(-50%, -45%);
+             gap: 30px;
+
+            h1{
+                font-size: 2.5em;
+            }
         }
     }
-    
-    button {
-        position: relative;
-        font-family: $font-family-fraunces, $font-family-fallback;
-        font-weight: $font-weight-fraunces-2;
-        font-size: $font-size;
-        border: none;
-        background-color: transparent;
-        align-self: flex-start;
-    }
-}
 
-.hero-learnmore-one.pic, .hero-learnmore-two.pic{
-    position: relative;
-    
-    //position of the caption
-    .caption {  
-        position: absolute;
-        top: 80%;
-        left: 50%;
-        transform: translate(-50%,-80%);
+    .hero-learnmore.one.text, .hero-learnmore.two.text {
+        padding: 50px 0;
+
+        .hero-learnmore-wraper {
+            @include flex($direction: column, $align: center);
+            width: 80%;
+
+            h3 {
+                font-size: 2.3em;
+            }
+
+            h3, p{
+                text-align: center;
+            }
+
+            button {
+                align-self: center;
+            }
+        }
     }
 
-    .caption {
+    .hero-learnmore-one.pic, .hero-learnmore-two.pic{
+        .caption {
+            width: 80%;
+            h3, p {
+                text-align: center;
+            }
+        }
+    }
+
+    //Main
+    main {
         @include flex($direction: column, $align: center);
-        gap: 30px;
-        h3 {
-            font-weight: $font-weight-fraunces-2;
-            text-align: center;
-            font-size: 2em;
-        }
-
-        p { 
-            text-align: center;
-            font-weight: $font-weight-barlow;
-            line-height: 1.5;
-        }
-    }
-}
-
-.hero-learnmore-one.pic {
-    h3 {
-        color: $color-pri-dark-cyan;
-    }
-    p {
-        color: darken($color-pri-dark-moderate-cyan, 10%);
-    }
-}
-
-.hero-learnmore-two.pic {
-    h3 {
-        color: $color-pri-dark-blue;
-    }
-    p {
-        color: darken($color-pri-dark-blue, 5%);
-    }
-}
-
-/* Main area */
-main {
-    @include flex($direction: column,  $align: center);
-    padding: 80px 0;
-    gap: 70px;
-
-    h2 {
-        color: $color-neu-dark-grayish-blue;
-        font-weight: $font-weight-fraunces-2;
-        letter-spacing: 7px;
-    }
-}
-
-.client-wraper {
-    width: 80%;
-    @include flex();
-    gap: 50px;
-    * {
-        flex: 1;
-    }
-}
-
-.client {
-    @include flex($direction: column, $align: center);
-    gap: 10px;
-    
-    p {
-        margin-top: 40px;
-        text-align: center;
-        color: $color-neu-very-dark-blue;
-        font-weight: $font-weight-barlow;
-        line-height: 1.5;
-    }
-
-    img {
-        width: 25%;
-        height: auto;
-        border-radius: 200px;
-    }
-
-    h3 {
-        margin-top: 40px;
-    }
-
-    h5 {
-        color: $color-neu-dark-grayish-blue;
-    }
-}
-
-/* Footer section */
-
-/** gallery **/
-.gallery {
-    @include flex();
-
-    * {
-        flex: 1;
-    }
-}
-
-footer {
-    nav {
-        @include flex($direction: column, $justify: center, $align: center);
-        gap: 40px;
-        background-color: lighten($color-pri-dark-moderate-cyan, 19%);
-        padding: 70px 0;
         
-        .logo{
+        h2 {
+            text-align: center;
+            font-size: 1.1em;
         }
+    }
 
-        a {
-            color: $color-pri-dark-moderate-cyan;
-        }
-        
-        .social-media {
-            margin-top: 50px;
-        }
+    .client-wraper {
+        @include flex($direction: column);
+    }
+
+    //Footer
+    /** gallery **/
+    .gallery {
+        @include grid($column: 1fr 1fr, $row: repeat(2, 1fr));
+    }
+
+    footer {
 
     }
 }
