--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -81,7 +81,7 @@ h1, h3, h5, p {
     @extend %reset-margin-padding;
 }
 
-//Images every where shoul be
+//Images every where should be
 img {
     height: 100%;
     width: 100%;
