Fix font issues

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -22,6 +22,9 @@ $color-neu-grayish-blue: hsl(210, 4%, 67%);
 $color-neu-white: hsl(0, 0%, 100%);
 
 // Typography
+//Importing fonts
+@import url('https://fonts.googleapis.com/css?family=Barlow:600');
+@import url('https://fonts.googleapis.com/css?family=Fraunces:700,900');
 
 //# Body Copy
 
