--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -6,6 +6,12 @@
            top: 50%;
            left: 50%;
            transform: translate(-50%, -50%);
+
+           width: auto;
+
+           h1 {
+                letter-spacing: 10px;
+           }
         }
     }
 
