Resolving html issues

--- a/scss/_desktop.scss
+++ b/scss/_desktop.scss
@@ -125,7 +125,7 @@ nav {
     right: 4%;
 
     display: none;
-    #mb-button-bar {
+    .mb-button-bar {
         background-color: $color-neu-white;
         width: 100%;
         height: 3px;
