--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ nav a {
   right: 4%;
   display: none;
 }
-#mb-button #mb-button-bar {
+#mb-button .mb-button-bar {
   background-color: hsl(0deg, 0%, 100%);
   width: 100%;
   height: 3px;
